--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^4.17.3",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^4.5.0",
     "nodemon": "^2.0.15"
   }
